--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -1,6 +1,6 @@
-{% extends 'UserBundle::layout.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block fos_user_content %}
+{% block body %}
 {% trans_default_domain 'FOSUserBundle' %}
     <h3>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</h3>
     {% if app.session is not empty %}
@@ -13,5 +13,5 @@
             </p>
         {% endif %}
     {% endif %}
-{% endblock fos_user_content %}
+{% endblock body %}
 
