--- a/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,8 +1,8 @@
-{% extends "BibliotecaUserBundle::layout.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% block fos_user_content %}
+{% block body %}
 <div class="panel panel-danger">
     <div class="panel-heading">
         <h3 class="panel-title">Recuperacion de contraseña</h3>
@@ -11,4 +11,4 @@
     	<p>{{ 'resetting.password_already_requested'|trans }}</p>
     </div>
 </div>
-{% endblock fos_user_content %}
+{% endblock body %}
