--- a/app/Resources/views/estudiante/new.html.twig
+++ b/app/Resources/views/estudiante/new.html.twig
@@ -297,7 +297,7 @@
             allowedFileExtensions : ['pdf'],
             showUpload: false,
             showClose:false,
-            maxFileSize: 2000,
+            maxFileSize: 20000,//KB
         });
     </script>
     {% javascripts
