--- a/app/Resources/views/estudiante/show.html.twig
+++ b/app/Resources/views/estudiante/show.html.twig
@@ -5,19 +5,32 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <h1>Perfil</h1>
+        
     </section>
     <!-- Main content -->
     <section class="content">
         <div class="nav-tabs-custom">
             <ul class="nav nav-tabs">
                 <li class="active"><a href="#datos" data-toggle="tab">Datos</a></li>
-                <li><a href="#timeline" data-toggle="tab">Progreso</a></li>
+                <li><a href="#progreso" data-toggle="tab">Progreso</a></li>
                 <li><a href="#settings" data-toggle="tab">Settings</a></li>
+                {% if verify_form is defined %}
+                <li style="float: right;background:rgba(34,34,34,0.5);">
+                    {{ form_start(verify_form) }}
+                    {{ form_errors(verify_form) }}
+                    <div class="form-group ">
+                    {{ form_widget(verify_form.estado)}}
+                    </div>
+                    <button type="submit" id="form_submit" name="form[submit]" class="btn btn-default">Guardar</button>            
+                    {{ form_widget(verify_form._token) }}
+                    {{ form_end(verify_form, {'render_rest': false}) }}
+                </li>
+                {% endif %}
             </ul>
             <div class="tab-content">
                 <div class="active tab-pane row" id="datos">
                     <!-- Datos basicos e institucionales-->
-                    <div class="box-primary col-sm-4">
+                    <div class="box-primary col-md-4 col-xs-12">
                         <div class="box-body box-profile">
                             {#<img class="profile-user-img img-responsive img-circle" src="../../dist/img/user4-128x128.jpg" alt="User profile picture"> #}
                             <h3 class="profile-username text-center">{{estudiante.nombre}} {{estudiante.apellido}}</h3>
@@ -60,7 +73,7 @@
                         </div><!-- /.datos basicos -->
                     </div><!-- /.box -->
                     <!-- Notas matematica -->
-                    <div class="box-primary col-sm-3 ">
+                    <div class="box-primary col-md-3  col-xs-12">
                         <div class="box-body">
                             <h3 class="profile-username text-center">Academicos</h3>
                             <p class="text-muted text-center">Notas Matematicas</p>
@@ -90,7 +103,7 @@
                         </div><!-- /.box-body -->
                     </div><!-- /.notas matematica -->
                     <!-- Opsu y socio-econimicos-->
-                    <div class="box-primary col-sm-4 ">
+                    <div class="box-primary col-md-4  col-xs-12">
                         <div class="box-body">
                             <h3 class="profile-username text-center">Admisión</h3>
                             <ul class="list-group list-group-unbordered">
@@ -107,7 +120,7 @@
                         </div><!-- /.box-body -->
                     </div><!-- /.opsu y socio-economicos-->
                     <!-- Socio-economicos -->
-                    <div class="box-primary col-sm-4 ">
+                    <div class="box-primary col-md-4  col-xs-12">
                         <div class="box-body">
                             <h3 class="profile-username text-center">Socio-economicos</h3>
                             <ul class="list-group list-group-unbordered">
@@ -204,7 +217,7 @@
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label for="inputName" class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10">
+                            <div class="col-sm-10 col-xs-12">
                                 <input type="email" class="form-control" id="inputName" placeholder="Name">
                             </div>
                         </div>
@@ -252,7 +265,9 @@
         </div><!-- /.nav-tabs-custom -->
         <div>
             <a class="btn btn-default btn-flat" href="{{ path('estudiante_index') }}"><i class="fa fa-arrow-left"></i>&nbsp;ir a lista</a>
+            {% if estudiante.estado == 2 %}
             <a class="btn btn-warning btn-flat pull-right" href="{{ path('estudiante_edit', { 'id': estudiante.id }) }}"><i class="fa fa-edit"></i>&nbsp;Editar</a>
+            {% endif %}
         </div>
     </section><!-- /.content -->
 {% endblock %}
