--- a/app/Resources/views/tema/index.html.twig
+++ b/app/Resources/views/tema/index.html.twig
@@ -6,6 +6,9 @@
         <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title">Temas</h3>
+                {% if is_granted('ROLE_PROFESOR') %}
+                <a style="float: right;"class="btn btn-success btn-flat" href="{{ path('tema_new') }}"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
+                {% endif %}
             </div><!-- /.box-header -->
             <div class="box-body" style="overflow:auto;">
                 <svg id="svg-canvas" width="960" height="600"></svg>
