--- a/app/Resources/views/tema/index.html.twig
+++ b/app/Resources/views/tema/index.html.twig
@@ -1,15 +1,14 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}Temas{% endblock %}
 {% block body %}
+<section class="content-header">
+    <h1 class="box-title">Temas{% if is_granted('ROLE_PROFESOR') %}
+    <a style="float: right;"class="btn btn-success btn-flat" href="{{ path('tema_new') }}"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
+        {% endif %}</h1>
+</section>
     <section class="content">
         <!-- general form elements -->
         <div class="box box-primary">
-            <div class="box-header with-border">
-                <h3 class="box-title">Temas</h3>
-                {% if is_granted('ROLE_PROFESOR') %}
-                <a style="float: right;"class="btn btn-success btn-flat" href="{{ path('tema_new') }}"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
-                {% endif %}
-            </div><!-- /.box-header -->
             <div class="box-body" style="overflow:auto;">
                 <svg id="svg-canvas" width="960" height="600"></svg>
             </div>
