--- a/app/Resources/views/estudiante/index.html.twig
+++ b/app/Resources/views/estudiante/index.html.twig
@@ -1,19 +1,16 @@
 {% extends '::base.html.twig' %}
+{% block title %}Estudiantes{% endblock %}
 {% block body %}
 <section class="content-header">
-<h1>Estudiantes</h1>
-<ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i> Incio</a></li>
-    <li><a href="#">Estudiantes</a></li>
-    <li class="active">Listar</li>
-</ol>
+    <h1 class="box-title">Ejercicios</h1>
 </section>
+<section class="content">
 <div class="box">
     <div class="box-body">
         <div class="table-responsive">
         <table id="tabla-users" class="table table-bordered table-hover">
             <thead>
-            <tr>
+                <tr>
                 <th>CI</th>
                 <th>1er Año</th>
                 <th>2do Año</th>
@@ -24,11 +21,11 @@
                 <th>Opsu</th>
                 <th>Registrado</th>
                 <th>Estado</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for estudiante in estudiantes %}
-            <tr>
+                </tr>
+            </thead>
+            <tbody>
+                {% for estudiante in estudiantes %}
+                <tr>
                 <td><a href="{{ path('estudiante_show', { 'id': estudiante.id }) }}">{{ estudiante.cedula }}</a></td>
                 <td>{{ estudiante.notaPrimero }}</td>
                 <td>{{ estudiante.notaSegundo }}</td>
@@ -39,23 +36,21 @@
                 <td>{% if estudiante.esAsignadoOPSU %}Sí{% else %}No{% endif %}</td>
                 <td>{{ estudiante.usuario.created|date('Y-m-d H:i') }}</td>
                 <td>{{ CONST['ESTADOS'][estudiante.estado]}}</td>
-            </tr>
-        {% endfor %}
-       </tbody>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
-    </div>
+        </div>
     </div>
 </div>
+</section>
 
 {% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('bundles/app/plugins/datatables/dataTables.bootstrap.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/app/plugins/datatables/jquery.dataTables.bootstrap.css') }}">
-    
 {% endblock %}
-
 
 {% block javascripts %}
     {{ parent() }}  
