--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -11,14 +11,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users"></i> Usuarios <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="{{ path('users')}}"><i class="fa fa-table"></i>&nbsp;Listar</a></li>
-            <li class="divider"></li>
-            <li><a href="{{ path('fos_user_registration_register')}}"><i class="fa fa-user-plus"></i>&nbsp;Registrar</a></li>
-          </ul>
-        </li>
+        {% if is_granted('ROLE_ADMIN') %}
+        <li><a href="{{ path('users')}}"><i class="fa fa-users"></i> Usuarios</a></li>
+        {% endif %}
+        {% if is_granted('ROLE_PROFESOR') %}
         <li><a href="{{ path('estudiante_index')}}"><i class="fa fa-graduation-cap"></i> Estudiantes</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -32,6 +28,7 @@
             <li><a href="{{ path('expresionmatematica_index')}}"><i class="fa fa-circle-o"></i>Expresiones Matematicas</a></li>
           </ul>
         </li>
+        {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
     <div class="navbar-custom-menu">
