--- a/app/Resources/views/usuario/index.html.twig
+++ b/app/Resources/views/usuario/index.html.twig
@@ -1,57 +1,57 @@
 {% extends '::base.html.twig' %}
+{% block title %}Usuarios{% endblock %}
 {% block body %}
 <section class="content-header">
-<h1>Usuarios</h1>
-<ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i> Incio</a></li>
-    <li><a href="#">Usuarios</a></li>
-    <li class="active">Listar</li>
-</ol>
+    <h1 class="box-title">Usuarios{% if is_granted('ROLE_ADMIN') %}
+        <a style="float: right;"class="btn btn-success btn-flat" href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus"></i>&nbsp;Agregar</a>
+        {% endif %}</h1>
 </section>
+<section class="content">
 <div class="box">
     <div class="box-body">
-    <div class="table-responsive">
-        <table id="tabla-users" class="table table-bordered table-hover display" cellspacing="0" width="100%">
-            <thead>    
-                    <th><i class="fa fa-user"></i> Usuario</th>
-                    <th>Rol</th>
-                    <th><i class="fa fa-calendar"></i> Último Acceso</th>
-                    <th><i class="fa fa-cogs"></i> Estado</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in users %}
-                    <tr>
-                        <td><a href="{{ path('user_show', { id: user.id }) }}">{{ user.username }}</a></td>
-                        <td>
-                            <ul>
-                            {% for role in user.roles %}
-                            <li>{{ role }}</li>
-                            {% endfor %}
-                            </ul>
-                        </td>
-                        <td>{% if user.lastLogin %}{{ user.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</td>
-                        <td>
-                            <div class="item-actions">
-                                {% if user.locked %}
-                                    <p class="alert-danger"><i class="fa fa-lock"></i>&nbsp;Bloqueado</a>
-                                {% endif %}
-                                {% if not user.enabled %}
-                                    <p class="alert-danger">&nbsp;Desabilitado</p>
-                                {% endif %}
-                                {% if not user.locked and user.enabled %}
-                                    <p class="alert-success"><i class="fa fa-check"></i>&nbsp;Normal</p>
-                                {% endif %}
-
-                            </div>
-                        </td>
+        <div class="table-responsive">
+            <table id="tabla-users" class="table table-bordered table-hover">
+                <thead>    
+                        <th><i class="fa fa-user"></i> Usuario</th>
+                        <th>Rol</th>
+                        <th><i class="fa fa-calendar"></i> Último Acceso</th>
+                        <th><i class="fa fa-cogs"></i> Estado</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                    {% for user in users %}
+                        <tr>
+                            <td><a href="{{ path('user_show', { id: user.id }) }}">{{ user.username }}</a></td>
+                            <td>
+                                <ul>
+                                {% for role in user.roles %}
+                                <li>{{ role }}</li>
+                                {% endfor %}
+                                </ul>
+                            </td>
+                            <td>{% if user.lastLogin %}{{ user.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</td>
+                            <td>
+                                <div class="item-actions">
+                                    {% if user.locked %}
+                                        <p class="alert-danger"><i class="fa fa-lock"></i>&nbsp;Bloqueado</a>
+                                    {% endif %}
+                                    {% if not user.enabled %}
+                                        <p class="alert-danger">&nbsp;Desabilitado</p>
+                                    {% endif %}
+                                    {% if not user.locked and user.enabled %}
+                                        <p class="alert-success"><i class="fa fa-check"></i>&nbsp;Normal</p>
+                                    {% endif %}
+
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+</section>
 
 {% endblock %}
 
