--- a/app/Resources/views/tema/new.html.twig
+++ b/app/Resources/views/tema/new.html.twig
@@ -17,96 +17,31 @@
                     {{ form_errors(form) }}
                     {{ form_row(form.nombre) }}
                     {{ form_row(form.padres) }}
-                    <div ng-init="{% for i in form.categorias %}addCategoria('{{ i.nombre.vars.value}}', '{{ i.procedimiento.vars.value}}');{% endfor %}">
-                        {{ form_label(form.categorias) }}
-                        {{ form_errors(form.categorias) }}
-                        <fieldset data-ng-repeat="categoria in categorias">
-                            <div class="input-group">
-                                <span class="form-control">[[ categoria.nombre ]]</span>
-                                <span class="input-group-btn">
-                                    <a class="btn btn-default btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="editAction([[$index]])"><i class="fa fa-edit text-yellow"></i></a>
-                                </span>
-                                <span class="input-group-btn">
-                                    <a class="btn btn-default btn-flat" ng-click="removeAction([[$index]])"><i class="fa fa-trash text-red"></i></a>
-                                </span>
-                            </div>
-
-                            <div ng-hide="true">
-                            <input type="text" value="[[ categoria.nombre ]]" id="[[ 'tema_categorias_'+$index+'_nombre' ]]" name="[['tema[categorias]['+$index+'][nombre]' ]]">
-                            <textarea id="[[ 'tema_categorias_'+$index+'_procedimiento' ]]" name="[['tema[categorias]['+$index+'][procedimiento]' ]]">[[ categoria.procedimiento ]]</textarea>
-                            </div>
-                        </fieldset>
-                        <a class="btn btn-success btn-xs btn-flat" data-toggle="modal" data-target="#categoriaModal" ng-click="addNewCategoria()"><i class="fa fa-plus"></i>&nbsp;Agregar</a>
-                    </div>
+                    {{ form_row(form.descripcion) }}
                 </div>
                 <div class="box-footer">
                     <a class="btn btn-danger btn-flat" href="{% if edition is defined %}{{ path('tema_show', { 'id': edition }) }}{% else %}{{ path('tema_index') }}{% endif %}"><i class="fa fa-arrow-left"></i>&nbsp;Cancelar</a>
                     <button class="btn btn-primary btn-flat pull-right" type="submit" id="tema_submit" name="tema[submit]"><i class="fa fa-save"></i>&nbsp;Guardar</button>
                 </div>
-            {{ form_row(form._token) }}
-            
-                    {#
-                    {{ form_widget(form.categorias) }}
-                    <input type="submit" value="Create" />
-                    #}
+                {{ form_row(form._token) }}
             {{ form_end(form, {'render_rest': false}) }}
-            {#, 'render_rest': false} #}
         </div>
     </section>
-    <div id="categoriaModal"class="modal modal-default">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Categoria</h4>
-                </div>
-                <div class="modal-body">
-                    <div><label class="label-control">Nombre&nbsp;<i class="fa fa-asterisk text-red" title="Campo requerido"></i></label><input type="text" class="form-control" ng-model="categoria.nombre"></div>
-                    <div><label class="label-control">Procedimiento&nbsp;<i class="fa fa-asterisk text-red" title="Campo requerido"></i></label> 
-                    <textarea ck-editor id="editor1" name="editor1" ng-model="categoria.procedimiento"></textarea></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Cancelar</button>
-                    <button type="button" class="btn btn-success" ng-click="saveCategoria()"  data-dismiss="modal" ng-disabled="invalidCategoria"><i class="fa fa-check"></i>&nbsp;Aceptar</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
 </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
-    {#
-{% javascripts
-    '@AppBundle/Resources/public/plugins/ckeditor/*'
-    '@AppBundle/Resources/public/plugins/select2/*'%}
-    <script src="{{ asset_url }}"></script>
-{% endjavascripts %}
-    #}
+    
     <script src="{{asset('bundles/app/plugins/ckeditor/ckeditor.js')}}"></script>
     <!-- Select2 -->
     <script src="{{ asset('bundles/app/plugins/select2/select2.full.min.js') }}"></script>
     <script>
         $(function () {
-            //Initialize Select2 Elements
-            //$(".select2").select2();
             $("#tema_padres").select2();
         });
         var urlMath = "{{ asset('bundles/app/plugins/MathJax/MathJax.js?config=TeX-AMS_HTML') }}";
-        console.log(urlMath);
-        /*CKEDITOR.replace( 'editor1', {
-            extraPlugins: 'mathjax',
-            mathJaxLib: 'http://cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML',
-            height: 200
-        } );
-        if ( CKEDITOR.env.ie && CKEDITOR.env.version == 8 ) {
-            document.getElementById( 'ie8-warning' ).className = 'tip alert';
-        }*/
     </script>
-    {#
-    <script src="{{ asset('bundles/app/angularjs/newTema/newTemaModule.js') }}"></script>
-    <script src="{{ asset('bundles/app/angularjs/newTema/newTemaController.js') }}"></script>#}
 
 {% javascripts
     '@AppBundle/Resources/public/angularjs/newTema/newTemaModule.js'
