--- a/app/Resources/views/tema/show.html.twig
+++ b/app/Resources/views/tema/show.html.twig
@@ -7,22 +7,31 @@
     </section>
     <section class="content">
         <div class="box box-primary">
-            <div class="box-body">
-                <ul>Temas Padres
-                {% for padre in tema.padres %}
-                    <li><a class="" href="{{ path('tema_show', { 'id': padre.id }) }}">{{ padre }}&nbsp;<i class="fa fa-arrow-circle-right"></i></a></li>
-                {% endfor %}
-                </ul>
-                <ul>Categorias
-                {% for categoria in tema.categorias %}
-                    <li><a ng-init="addCategoria('{{categoria.nombre}}','{{categoria.procedimiento}}');" href="#" data-toggle="modal" data-target="#categoriaModal" ng-click="openAction({{loop.index0}})">{{ categoria }}</a></li>
-                {% endfor %}
-                </ul>
-                <ul>Temas Hijos
-                {% for hijo in tema.hijos %}
-                    <li><a class="" href="{{ path('tema_show', { 'id': hijo.id }) }}">{{ hijo }}&nbsp;<i class="fa fa-arrow-circle-right"></i></a></li>
-                {% endfor %}
-                </ul>
+            <div class="row box-body">
+                <div class="col-xs-12 form-group">
+                    <label class="col-xs-12 col-md-2 control-label">Temas Antecesores</label> 
+                    <div class="col-xs-12 col-md-10">
+                        {% for padre in tema.padres %}
+                            <a class="form-control-static" href="{{ path('tema_show', { 'id': padre.id }) }}">{{ padre }}&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
+                            <br>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <label class="col-xs-12 col-md-2 control-label">Descripción</label> 
+                    <div class="col-xs-12 col-md-10">
+                        <p class="form-control-static">{{ tema.descripcion|raw }}</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 form-group">
+                    <label class="col-xs-12 col-md-2 control-label">Temas Sucesores</label> 
+                    <div class="col-xs-12 col-md-10">
+                        {% for hijo in tema.hijos %}
+                            <a class="form-control-static" href="{{ path('tema_show', { 'id': hijo.id }) }}">{{ hijo }}&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
+                            <br>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
             <div class="box-footer">
                 <a class="btn btn-default btn-flat" href="{{ path('tema_index') }}"><i class="fa fa-arrow-left"></i>&nbsp;ir a lista</a>
@@ -30,52 +39,15 @@
             </div>
         </div>
     </section>
-    <div id="categoriaModal" class="modal modal-default">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">[[categoria.nombre]]</h4>
-                </div>
-                <div class="modal-body">
-                    <div><label class="label-control">Procedimiento&nbsp;</label>[[categoria.procedimiento]]</div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><i class="fa fa-close"></i>&nbsp;Cerrar</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
 </div>
 
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript">
-/*
-          var response = "{{ tema }}";
-          var div = document.createElement('div');
-          div.innerHTML = response;
-          response = div.firstChild.nodeValue;
-          response = JSON.parse(response);
-          console.log("response",response);
-        function getJSonObject(value) {
-            return $.parseJSON(value.replace(/&quot;/ig, '"'));
-        }
-
-        var storeJSON = getJSonObject("{{tema.categorias|json_encode()}}");
-        console.log(storeJSON);
-        $.each(storeJSON, function(k,v){
-            alert('Key = ' + k + '\n' + 'Value = ' + v);
-        });*/
-    </script>
-    
     <script src="{{ asset('bundles/app/plugins/MathJax/MathJax.js?config=TeX-AMS_HTML') }}"></script>
-
-{% javascripts
-    '@AppBundle/Resources/public/angularjs/showTema/showTemaModule.js'
-    '@AppBundle/Resources/public/angularjs/showTema/showTemaController.js'%}
-    <script src="{{ asset_url }}"></script>
-{% endjavascripts %}
-
+    {% javascripts
+        '@AppBundle/Resources/public/angularjs/showTema/showTemaModule.js'
+        '@AppBundle/Resources/public/angularjs/showTema/showTemaController.js'%}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
