--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,6 +33,9 @@
                 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
                 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
             <![endif]-->
+            <style type="text/css">
+                @media screen and (max-width: 767px) {.select2 {width: 100% !important;}}
+            </style>
         {% endblock %}        
     </head>
     <body ng-app="AppModule" class="hold-transition skin-blue layout-top-nav" ng-controller="LoadCtrl">
